--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -437,8 +437,9 @@ html, body {
 
 /*Pages Category items*/
 .elementsPage {
-  width: 90%;
-  float: right; }
+    padding-top: 70px;
+    width: 90%;
+    float: right; }
 
 .itemsContent {
   margin: auto;
