--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -18,21 +18,25 @@ html, body {
   z-index: 10;
   height: 70px;
   position: fixed; }
+.header, .footer, .header__elements, .product-section, .tab-content__layoutCategories, .Categories, .modal-dialog__login-form, .login-form__input, .navbar, .navbar__link, .product-section__product-description, .elementspage, {
+      box-sizing: border-box;}
+.header__elements, .tab-content__layoutCategories, .Categories, .navbar__link,  .breadcrumb__list, .min-img__arrow, .min-img__arrow, .min-img--style, .layout-description__header, .layout-description__img-star, .add-cart__btn, .lineSocial__line-social, .addressTextInfo,   {
+    display:inline-block;
+}
+.header__elements--logo, .header-elements__authorization--img, .header-elements__basket--img, .product-description__slider-img, .product-description__layout-description, .layout-description__quantiti, {
+      float: left;
+}
 .header, .footer {
   font-size: 20px;
   background: -webkit-radial-gradient(center, circle farthest-side, #000, #7a7a7a 80%);
-  color: white;
-  box-sizing: border-box; }
+  color: white;}
 .header__elements--logo {
   width: 67px;
   height: 50px;
   background: url("../img/Symbol/4.gif");
   background-repeat: no-repeat;
-  background-size: contain;
-  float: left; }
+  background-size: contain; }
 .header__elements {
-  display: inline-block;
-  box-sizing: border-box;
   margin-left: 15px;
   color: white;
   margin: 10px 15px 10px 15px; }
@@ -57,7 +61,6 @@ html, body {
   background-size: contain;
   width: 20px;
   height: 20px;
-  float: left;
   background-repeat: no-repeat;
   padding-left: 5px; }
 .footer {
@@ -69,7 +72,6 @@ html, body {
 .product-section {
     padding-top: 70px;
     padding-bottom: 40px;
-    box-sizing: border-box;
     margin-bottom: 10px;
     width: 90%;
     margin: 2% auto; }
@@ -99,8 +101,6 @@ html, body {
     justify-content: center;
 }
 .tab-content__layoutCategories, .Categories {
-  box-sizing: border-box;
-  display: inline-block;
     flex-basis: 283px;
 }
 .tab-content .Categories {
@@ -132,7 +132,6 @@ html, body {
 /*Login*/
 .modal-dialog__login-form {
   margin: 10% auto;
-  box-sizing: border-box;
   position: relative;
   width: 300px;
   min-height: 200px;
@@ -141,7 +140,7 @@ html, body {
 .login-form {
   padding: 20px 40px 35px 40px;
   background: -webkit-gradient(linear, 100% 100%, 100% 0%, color-stop(0.57, #e6e6e6), to(white)); }
-.login-form__close, .modalBigImg .close {
+.login-form__close{
   position: absolute;
   right: -10px;
   top: -10px;
@@ -155,7 +154,6 @@ html, body {
   border-radius: 50%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5); }
 .login-form__input {
-  box-sizing: border-box;
   padding: 3px;
   width: 217px;
   margin-bottom: 7px;
@@ -173,8 +171,7 @@ html, body {
 /*Menu*/
 .navbar {
   width: 10%;
-  margin-top: 120px;
-  box-sizing: border-box; }
+  margin-top: 120px;}
 
 .navbar--desktop {
   position: fixed;
@@ -186,9 +183,7 @@ html, body {
 
 .navbar__link {
   z-index: 100;
-  box-sizing: border-box;
   width: 100%;
-  display: inline-block;
   border-bottom: 1px solid rebeccapurple;
   padding: 5px;
   text-decoration: none;
@@ -244,18 +239,13 @@ html, body {
   padding-right: 8px; }
 /*Product description*/
 .product-section__product-description {
-  box-sizing: border-box;
   width: 80%;
   margin: 0 auto; }
- .breadcrumb__list {
-  display: inline-block; }
 .breadcrumb li:after {
   padding: 0px 5px;
-  content: "/";
-  display: inline-block; }
+  content: "/";}
 .product-description__slider-img {
   margin-top: 20px;
-  float: left;
   width: 31%;
   height: 25%;
   min-width: 200px; }
@@ -267,7 +257,6 @@ html, body {
   width: 70%; }
 .min-img--style {
   vertical-align: middle;
-  display: inline-block;
   width: 10%;
   min-width: 28px; }
 .slider-img__min-img {
@@ -276,7 +265,6 @@ html, body {
 .min-img__arrow, .min-img__arrow {
   top: 10px;
   position: relative;
-  display: inline-block;
   width: 0;
   height: 0;
   border: 15px solid transparent; }
@@ -288,11 +276,8 @@ html, body {
   border-right: 0; }
 .product-description__layout-description {
   margin-top: 10px;
-  float: left;
   width: 60%; }
-.layout-description__header, .layout-description__img-star {
-  display: inline-block; }
-.img-star {
+ .img-star {
   background: url("../img/Symbol/rating.png") repeat-x;
   width: 80px;
   height: 14px;
@@ -305,11 +290,11 @@ html, body {
   margin-top: 30px;
   margin-left: 7px; }
 .layout-description__quantiti {
-  float: left;
   margin-top: 5px; }
 .layout-description__add-cart {
   float: right;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+    margin-top: -40px;}
 .add-cart__btn {
     text-decoration: none;
   margin-top: 20px;
@@ -342,12 +327,11 @@ html, body {
   text-align: center; }
 .add-cart {
   font-size: 30px; }
-/*Social*/
+        /*Social*/
 .layout-description__lineSocial {
   width: 100%;
   clear: both; }
 .lineSocial__line-social {
-  display: inline-block;
   background-image: url("../img/Symbol/icosocial.png");
   background-repeat: repeat-x;
   width: 52px;
@@ -478,7 +462,6 @@ nav, .itemsContent {
 .elementspage {
   width: 90%;
   float: right;
-  box-sizing: border-box;
   margin-bottom: 70px; }
 
 .elementspage--style {
@@ -642,60 +625,49 @@ nav, .itemsContent {
   background-image: url("../img/Video adapter/Gigabyte/GIGABYTE GeForce GTX 750 Ti BLACK EDITION GV-N75TWF2BK-2GI.jpg"); }
 
 /*Order form*/
-.orderFormLayout {
-  position: relative;
-  width: 390px; }
 
+.orderFormLayout {
+    position: relative;
+    width: 390px; }
 .orderForm {
+    .line1, .line2, .line3, .line4, .line5, .lineValid{
+          position: relative;
+    }
   background-image: url("../img/Symbol/card-form.png");
   width: 390px;
-  height: 204px; }
-
-.orderForm .line1 {
-  position: relative;
+  height: 204px; 
+    .line1 {
   top: 45px;
   left: 17px;
   width: 270px; }
-
-.orderForm .line2 {
-  position: relative;
+    .line2 {
   top: 50px;
   left: 88px; }
-
-.orderForm .line3 {
-  position: relative;
+    .line3 {
   top: 60px;
   left: 26px; }
-
-.orderForm .line4 {
-  position: relative;
+    .line4 {
   top: -15px;
   left: 308.5px; }
-
-.orderForm .line5 {
+    .line5 {
   z-index: 1;
   width: 100px;
-  position: relative;
   top: 70px;
   margin: auto; }
-
-.orderForm .lineValid {
+    .lineValid {
   font-size: 12px;
-  position: relative;
   top: 45px;
   left: 99px;
   margin-right: 31px; }
-
+}
 .line1 input, .line4 input, .line2 select {
   width: 60px;
   height: 30px;
   text-align: center; }
-
 .line3 input {
   width: 250px;
   height: 20px;
   text-align: center; }
-
 .line5 input {
   z-index: 1;
   border: none;
@@ -714,7 +686,6 @@ nav, .itemsContent {
 .positionAdd {
   width: 80%;
   margin: auto; }
-
 .squareAdd {
   z-index: 2;
   float: left;
@@ -726,29 +697,21 @@ nav, .itemsContent {
   position: relative;
   display: inline-block;
   width: 48%; }
-
 .squareAdd h1 {
   font-size: 50px; }
-
 .addressInfo {
   font-size: 35px;
   text-align: left;
   margin-bottom: 7px; }
-
-.addressTextInfo {
-  display: inline-block; }
-
 .changeCountry {
   width: 110px;
   float: right; }
-
 .addressInfo input {
   font-size: 25px;
   vertical-align: middle;
   float: right;
   width: 50%;
   height: 33px; }
-
 .addCheck {
   font-size: 25px; }
 
@@ -910,21 +873,6 @@ nav, .itemsContent {
   font-weight: bold;
   font-size: 25px; }
 
-.modal-dialog {
-  display: none;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 99999;
-  pointer-events: none;
-  background: rgba(0, 0, 0, 0.8); }
-
-.modal-dialog:target {
-  display: block;
-  pointer-events: auto; }
-
 @media screen and (max-width: 666px) {
     .header__elements--logo {
         width: 53px;
@@ -948,62 +896,48 @@ nav, .itemsContent {
         min-width: 250px; } 
     .product-description__layout-description{
         width:100%;
-        margin-top: 0px;
-    }
+        margin-top: 0px;}
     .product-section{
         width: 332px;
-        margin: 20px auto 40px auto;
-    }
+        margin: 20px auto 40px auto;}
     .add-cart__btn {
         padding: 7px 21px;
-        font-size: 17px;
-    }
+        font-size: 17px;}
     .layout-description__add-cart {
-        margin-top: -35px;
-    }
+        margin-top: -35px;}
     .add-cart {
-        font-size: 24px;
-    }
+        font-size: 24px;}
     .layout-description__lineSocial {
         width: 220px;
-        margin: auto;
-    }
+        margin: auto;}
     .tab-content .Categories {
-        margin: 2px;
-    }
-        .orderForm {
+        margin: 2px;}
+    .orderForm {
+       }
+    .line1 input, .line4 input, .line2 select {
+        width: 45px;
+        height: 22px;}
+    .orderForm{
         background-size: contain;
         background-repeat: no-repeat;
         width: 315px;
         height: 168px;
         margin-bottom: 50px;
-
-    }
-    .line1 input, .line4 input, .line2 select {
-        width: 45px;
-        height: 22px;
-    }
-    .orderForm .line2 {
-        left: 74px;
-        top: 45px;
-    }
-    .orderForm .lineValid {
-        left: 81px;
-        margin-right: 20px;
-    }
-    .orderForm .line3 {
-        position: relative;
-        top: 52px;
-        left: 26px;
-    }
+            .line2 {
+            left: 74px;
+            top: 45px;}
+            .line3 {
+            top: 52px;
+            left: 26px;}
+            .line4 {
+            left: 249.5px;}
+            .lineValid {
+            left: 81px;
+            margin-right: 20px;}
+    } 
     .line3 input {
         width: 192px;
-        height:18px;
-    }
-    .orderForm .line4 {
-        left: 249.5px;
-    }
-    
+        height:18px;}
 }
 @media screen and (min-width: 666px) and (max-width: 800px) {
     .product-section__product-description {
@@ -1017,7 +951,7 @@ nav, .itemsContent {
     }
     .product-section{
         width:95%;
-        margin: 6px auto;
+        margin: 6px auto 20px;
     }
     .add-cart__btn {
         padding: 7px 21px;
