--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -523,8 +523,7 @@ nav, .itemsContent {
   color: red; }
 
 .elementspagesquare {
-  width: 25%;
-  height: 200px;
+  width: 25%;  
 margin-bottom: 20px;}
 
 .elementspagesquare--style {
@@ -954,6 +953,71 @@ margin-bottom: 20px;}
     .line3 input {
         width: 192px;
         height:18px;}
+/*-------------------------------MOTHER RESPONSIVE-----------------------*/
+    .wrapper__responsive {
+        display: flex;
+        flex-flow: row wrap;
+    }
+    .header, .nav, .footer, .section {
+        flex: 1 auto;
+    }
+    .navbar {  
+        display: block;
+        width: 100%;
+        margin-top: 65px;
+        border-radius: 0px;        
+    }
+    .navbar--desktop { 
+        position: static;
+        list-style-type: none;
+        border: 5px solid rebeccapurple;        
+    }
+    .navbar__link {
+        border-radius: 0px;
+        text-align: center;
+    }
+    .navbar__img {        
+        height: 0px;
+    }    
+    
+    .elementspage {
+        width: 100%;        
+        margin-bottom: 70px; 
+    }
+    
+    .elementspage--style {
+        overflow: hidden;
+        padding-top: 0px;
+    }
+    
+    .viewmode {
+        height: 0;
+        text-align: right;
+        margin-right: 0;
+        margin-top: 0;
+        overflow: hidden;
+    } 
+    
+    .elementspagesquare {
+        width: 100%;        
+    }
+    
+    .elementspagesquare--style {
+        vertical-align: top;
+        padding-top: 20px;
+        display: block;
+        text-align: center;
+        font-size: 18px;        
+        float: none;
+    } 
+    
+    .elementspagelink {        
+        width: 100%;    
+    }
+       
+    
+    
+/*---------------------------FINISH MOTHER RESPONSIVE--------------------*/    
 }
 @media screen and (min-width: 666px) and (max-width: 800px) {
     .product-section__product-description {
