--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -21,7 +21,7 @@ html, body {
   z-index: 10;
   height: 70px;
   position: fixed; }
-.header, .footer, .header__elements, .product-section, .tab-content__layoutCategories, .tab-content__layoutitems, tab-content__layoutadd, .Categories, .modal-dialog__login-form, .login-form__input, .navbar, .navbar__link, .product-section__product-description, .elementspage, {
+.header, .footer, .header__elements, .product-section, .tab-content__layoutCategories, .tab-content__layoutitems, tab-content__layoutadd, .Categories, .modal-dialog__login-form, .login-form__input, .navbar, .navbar__link, .product-section__product-description, .elementspage, .cartpage {
       box-sizing: border-box;}
 .header__elements, .tab-content__layoutCategories, .tab-content__layoutitems, tab-content__layoutadd, .Categories, .navbar__link,  .breadcrumb__list, .min-img__arrow, .min-img__arrow, .min-img--style, .layout-description__header, .layout-description__img-star, .add-cart__btn, .lineSocial__line-social, .addressinfo__text,   {
     display:inline-block;
@@ -126,7 +126,7 @@ html, body {
     border: 1px solid black;
     border-radius: 15px;
     margin:20px }
-.header:after, .tab-content:after, footer, .itemsContent:after, .formAdd:after, .product-description:after, description:after, .square:after, .squareElementsInclude:after {
+.header:after, .tab-content:after, footer, .itemsContent:after, .formAdd:after, .product-description:after, .description:after, .square:after, .squareElementsInclude:after, .itemscart__cellview:after, .descriptionitemlink:after, .descriptionitem__count:after {
   display: block;
   content: '';
   clear: both; }
@@ -197,7 +197,6 @@ html, body {
   width: 10%;
   margin-top: 120px;
   &__link {
-  z-index: 100;
   width: 100%;
   border-bottom: 1px solid rebeccapurple;
   padding: 5px;
@@ -208,7 +207,7 @@ html, body {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  
+  margin-bottom: -5px;
   }
 
   &__link:link {
@@ -267,6 +266,7 @@ html, body {
 
 /*Product description*/
 @mixin order-btn{
+    text-align: center;
     text-decoration: none;
     margin-top: 20px;
     padding: 10px 16px;
@@ -276,7 +276,7 @@ html, body {
     color: white;
     font-weight: bold;
     font-size: 25px; 
-    min-width: 125px;
+    /*min-width: 125px;*/
     max-width: 224px;
 }
 .product-section__product-description {
@@ -508,7 +508,7 @@ nav, .itemsContent {
   float: right;
   margin-bottom: 70px; }
 
-.elementspage--style {
+.elementspage--style, .cartpage--style {
   padding-top: 70px; }
 
 .elementspage__content {
@@ -594,7 +594,7 @@ margin-bottom: 20px;}
     display: inline-block;
     width: 70%;  
     font-size: 18px;
-    white-space: nowrap;
+    white-space: nowrap;    
 }
 
 .elementspagelink__imglist {
@@ -722,9 +722,6 @@ margin-bottom: 20px;}
 }
 
 /*Address page*/
-/*.product-section .product-section__tab-content--style {
-    justify-content: space-around;
-}*/
 .product-section__add {    
     display: flex;
     -webkit-flex-flow: row wrap;
@@ -778,44 +775,103 @@ margin-bottom: 20px;}
   text-align: center;
   padding-top: 50px; }
 
-/*Cart page*/
+                                /*Cart page*/
+/*Total*/
+.cartpage {    
+  width: 100%;  
+  margin-bottom: 70px;
+    &__cart {
+        display: inline-block;
+        float: left;
+        width: 75%;
+        margin-bottom: 20px
+    }
+    &__totalbar {
+        width: 25%;
+        padding-top: 30px;
+    }
+}
+
+.cartpage--style {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.totalbar {
+    &__title, &__price, &__countitems {        
+        text-align: center;
+    }
+    &__countitems {        
+        font-size: 16px;
+        color: grey;
+    }
+    &__title {
+       font-size: 30px; 
+    }
+    &__price {
+        margin-bottom: 10px;
+        font-size: 25px;
+    }
+    &__pay {
+        .tocheckout {
+            margin: auto;
+            text-align: center;
+        }
+    }
+}
+
+.totalbar__link {
+    text-decoration: none;
+}
+
+.tocheckout {
+@include order-btn;}
+
 /*Table*/
-.cartPage {
+.itemscart {  
+  margin: auto;
+  width: 80%;
+    &__cellview {
+        border: 2px solid black;        
+        text-align: center;
+    }
+    &__boximg {
+        display: inline-block;
+        text-align: center;
+        width: 15%;
+        float: left;
+    }
+    &__imglink {
+        width: 100%;
+        text-decoration: none;          
+    }
+}
+
+.itemscart__imglink--style {
+    display: inline-block;
+    clear: both;
+}
+
+.descriptionitem {
   display: inline-block;
   float: right;
-  min-height: 250px;
-  width: 75%; }
+  width: 85%;
+  margin-top: 10px;
+  font-size: 30px;
+    &__link {
+        display: inline-block;
+        float: left;
+    }
+}
 
-.cartTable {
-  display: inline-block;
-  float: left;
-  width: 100%;
-  margin-top: 25px; }
-
-.itemsCart {
-  float: right;
-  margin-right: 15px;
-  width: 95%; }
-
-.itemsCart tr {
-  height: 80px; }
-
-.cellView {
-  border: 2px solid black; }
-
-.descriptionItem {
-  display: inline-block;
-  width: 90%;
-  font-size: 30px; }
-
-.imgItemTable {
-  float: left;
-  display: inline-block;
+.imgitemtable {
+  content: '';
+  height: 100px;
   background-size: contain;
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
-  background-position: center; }
+  background-repeat: no-repeat;  
+  }
 
 .img1 {
   background-image: url("../img/CPU/AMD/AMD%20A8-7600%20OEM.jpg"); }
@@ -823,48 +879,61 @@ margin-bottom: 20px;}
 .img2 {
   background-image: url("../img/RAM/Kingston/Kingston%20HyperX%20FURY%20Red%20Series%20%5BHX313C9FR4%5D%204%20%D0%93%D0%B1.jpg"); }
 
-.linkProperties {
-  display: inline-block;
-  float: left;
-  margin-top: 7px;
-  margin-left: 5px;
-  height: 30px; }
+.linkproperties__cart {    
+    width: 30%;    
+}
+.linkproperties__cart--style {
+    display: inline-block;
+    font-size: 20px;
+    white-space: nowrap;
+    float: left;
+    overflow: hidden;    
+    text-overflow: ellipsis;
+    text-align: left;
+}
 
-.linkCart {
-  max-height: 17px;
-  max-width: 400px;
-  font-size: 22px;
-  vertical-align: top; }
-
-.countCart {
+.descriptionitem__count {
+  width: 30%;
   float: right;
   display: inline-block;
-  padding-top: 5px; }
+}
 
-.countCart p {
+.cartquant {
   display: inline-block;
+  float: left;
   text-align: center;
-  font-size: 20px; }
+  font-size: 30px;
+  vertical-align: top;
+  margin-right: 10px;
+}
 
-.cartInput {
+.cartinput {
   display: inline-block;
-  vertical-align: middle; }
+  float: left;  
+}
 
-.cartInput input {
-  width: 30px;
-  height: 30px;
-  font-size: 20px; }
+.cartinput input {
+  width: 30px;  
+  font-size: 24px;
+  vertical-align: top;
+}
 
-.cartPriceView {
-  vertical-align: middle;
+.cartpriceview {
+  font-size: 26px;
+  float: right;
+  margin-right: 20px;
   margin-left: 10px;
-  display: inline-block; }
+  display: inline-block;  
+}
 
-.itemsRemove {
+.itemsremove {  
   padding-top: 4px;
   height: 30px;
+  margin-right: 20px;
   font-size: 20px;
-  text-align: right; }
+  text-align: right;
+  clear: both;
+}
 
 /*Total Table*/
 .totalPriceTable {
@@ -881,37 +950,6 @@ margin-bottom: 20px;}
 .cartPage .toCheckout {
   float: right; }
 
-/*Total*/
-.totalBar {
-  margin-top: 25px;
-  min-height: 150px;
-  width: 20%;
-  display: inline-block;
-  float: right;
-  text-align: center;
-  padding-bottom: 50px; }
-.totalbar__link {
-    text-decoration: none;
-}
-
-.totalBar h2 {
-  font-size: 25px;
-  margin-bottom: 2px;
-  text-align: left; }
-
-.totalBar p {
-  text-align: left;
-  font-size: 15px; }
-
-.totalBar hr {
-  margin-top: 5px;
-  margin-bottom: 5px; }
-
-.totalBar h1 {
-  font-size: 30px; }
-
-.toCheckout {
-@include order-btn; }
 .freeBlock {
     height: 70px;
     width: 100%;
