--- a/src/stylus/style.scss
+++ b/src/stylus/style.scss
@@ -94,7 +94,7 @@ html, body {
     margin: 2% auto; }
 .tab-content .imgCooling {
   background-image: url("../img/Cooling/DEEPCOOL/DEEPCOOL%20Beta%2010.jpg"); }
-.tab-content .imgCooling, .imgCPU, .imgHDD, .imgMotherboard, .imgPowerSource, .imgRAM, .imgvideoAdapter {
+.tab-content .imgCooling, .imgCPU, .imgHDD, .imgMotherboard, .imgPowerSource, .imgRAM, .imgVideoAdapter {
   content: "";
   background-size: contain;
   height: 200px;
@@ -110,8 +110,8 @@ html, body {
   background-image: url("../img/Power%20source/Aero%20Cool/Aerocool KCAS 500W.jpg"); }
 .tab-content .imgRAM {
   background-image: url("../img/RAM/A-Data/A-DATA%20XPG%20V1%20%5BAX3U1600W4G11-DD%5D%208%20%D0%93%D0%B1.jpg"); }
-.tab-content .imgvideoAdapter {
-  background-image: url("../img/CPU/Intel/Intel%20Pentium%20G2020%20OEM.jpg"); }
+.tab-content .imgVideoAdapter {
+  background-image: url("../img/Video%20adapter/ASUS/Asus AMD Radeon R7 250 [R7250-1GD5].jpg"); }
 .product-section__tab-content {
     display: flex;
     -webkit-flex-flow: row wrap;
